fix layout breakpoint

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -84,7 +84,7 @@
     width: 0;
   }
 }
-@media (min-width: 768px) {
+@media (min-width: 992px) {
   #content-wrapper .navbar-fixed-full {
     width: calc(100% - 14rem);
   }
